Add method to generate combined PDF report
Added a new endpoint to the `ReportController` which invokes the new `generateCombinedPdfReport` method in the `ReportService`. This method creates a combined PDF report from two separate reports by using list of `JasperPrint` objects in the 'ReportServiceImpl'. Various changes have been made to the JSON file which include server URL and the order of object properties.
